# FREulerSolver_CUDA

./: CMakeLists.txt  README.md  main.cpp
include/: euler_eq.cuh  flux_utils.h  jacobian.cuh  limiter.h  mesh_init.h  nodes_init.h  parser.h  shape_f.h  solver.h  type_def.cuh  visualize.h
src/: flux_utils.cu  jacobian.cpp  limiter.cu  mesh_init.cpp  nodes_init.cpp  parser.cpp  shape_f.cpp  solver.cpp  visualize.cpp
test/: CMakeLists.txt  flux_utils_test.cpp  jacobian_test.cpp  limiter_test.cpp  mesh_init_test.cpp  nodes_init_test.cpp  parser_test.cpp  solver_test.cpp  visualize_test.cpp
